Limpeza de comentarios inuteis com ajuda de scripts e IA